--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,8 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+#list span {
+  display: inline-block;
+  padding: 10px;
+}
